--- a/desafios/nivel3/local-business/barber-shop/index.html
+++ b/desafios/nivel3/local-business/barber-shop/index.html
@@ -46,15 +46,64 @@
 
     </section>
 
-    <section id="services">
+    <section id="services-container">
 
-      
+      <div class="container services">
+
+        <header>
+          <span class="overtitle">Nossos serviços</span>
+          <h2 class="title">Veja o que fazemos de melhor</h2>
+        </header>
+
+        <div class="services-list">
+
+          <div class="service-card">
+            <img src="./barbearia/img-card-01-desktop.png" alt="pente no cabelo">
+            <div class="service-card__text">
+              <h3>Corte de cabelo</h3>
+              <p>Cortes profissionais e modernos para valorizar seu estilo.</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <img src="./barbearia/img-card-02-desktop.png" alt="pente no cabelo">
+            <div class="service-card__text">
+              <h3>Barba aparada</h3>
+              <p>Dê uma bela forma pra sua barba com nossos cuidados especiais.</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <img src="./barbearia/img-card-03-desktop.png" alt="pente no cabelo">
+            <div class="service-card__text">
+              <h3>Lavagem</h3>
+              <p>Cuida da limpeza da sua cabeça com produtos exclusivos.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
 
     </section>
 
-    <section id="location">
+    <section id="location-container">
 
-      
+      <div class="container location">
+
+        <header>
+          <span class="overtitle">Onde estamos</span>
+          <h2 class="title">Venha nos fazer uma visita!</h2>
+          <address>
+              <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.5997 19.433C19.451 20.5817 16.9847 23.048 15.4137 24.6189C14.6327 25.4 13.3679 25.4005 12.5868 24.6195C11.0427 23.0753 8.62592 20.6586 7.40033 19.433C3.75544 15.7881 3.75544 9.87856 7.40033 6.23367C11.0452 2.58878 16.9548 2.58878 20.5997 6.23367C24.2446 9.87856 24.2446 15.7881 20.5997 19.433Z" stroke="#E5383B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              <path d="M17.5 12.8333C17.5 14.7663 15.933 16.3333 14 16.3333C12.067 16.3333 10.5 14.7663 10.5 12.8333C10.5 10.9003 12.067 9.33333 14 9.33333C15.933 9.33333 17.5 10.9003 17.5 12.8333Z" stroke="#E5383B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            <span>Rua 08 de agosto, 497</span>
+          </address>
+        </header>
+
+      </div>
 
     </section>
 
