--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <h1 class="title">Hello World!</h1>
       <a class="link bio" href="./bio.html">link da bio</a>
       <br />
-      <a class="link" href="http://google.com" target="_blank">link do google</a>
+      <a class="link" href="./desafios/nivel3/stone/stone.html" target="_blank">Clone Stone</a>
       <br />
-      <a class="link" href="./desafios/nivel3/stone/stone.html">Stone</a>
+      <a class="link" href="./desafios/nivel3/mercado-pago/mercado-pago.html" target="_blank">Clone Mercado Pago</a>
       <br />
-      <a class="link" href="./desafios/nivel3/mercado-pago/mercado-pago.html">Mercado Pago</a>
+      <a class="link" href="./desafios/nivel3/local-business/vet/index.html" target="_blank">Landing Page Clínica Veterinária</a>
     </div>
   </body>
 </html>
