--- a/javascript/modulo16/exercicio.html
+++ b/javascript/modulo16/exercicio.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Funções</title>
-  <script src="./index.js"></script>
+  <title>Exercícios Módulo 16</title>
+  <script src="./exercicio.js"></script>
 </head>
 <body>
-  
+
 </body>
 </html>
