--- a/javascript/modulo18/index.html
+++ b/javascript/modulo18/index.html
@@ -7,6 +7,12 @@
   <title>DOM</title>
 </head>
 <body>
-  
+  <div id="app">1</div>
+  <div>2</div>
+  <!-- <script src="./index.js"></script> -->
+  <script>
+    console.log(window.document.getElementById('app'))
+    console.log(window.document.getElementsByTagName('div'))
+  </script>
 </body>
 </html>
