JS studies modulo 18 - DOM

--- a/javascript/modulo18/index.html
+++ b/javascript/modulo18/index.html
@@ -9,15 +9,12 @@
 <body>
   <div id="app" class="root" x="10">1 - Teste</div>
   <div>2</div>
-  <!-- <script src="./index.js"></script> -->
-  <script>
-    const div = window.document.getElementById('app')
-    console.log(div)
-    console.log(div.attributes)
-    console.log(div.attributes.x)
-    console.log(div.hasAttribute('class'))
-    console.log(div.hasAttribute('z'))
-    // console.log(window.document.getElementsByTagName('div'))
-  </script>
+
+  <div id="app2">
+    <input type="number" id="n1" name="n1" class="input"/> +
+    <input type="number" id="n2" name="n2" class="input"/>
+  </div>
+
+  <script src="./index.js"></script>
 </body>
 </html>
