JS studie modulo 18 - DOM

--- a/javascript/modulo18/index.html
+++ b/javascript/modulo18/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
   <div id="app" class="root" x="10">1 - Teste</div>
-  <div>2</div>
+  <div>Teste</div>
 
   <div id="app2">
     <input type="number" id="n1" name="n1" class="input"/> +
     <input type="number" id="n2" name="n2" class="input"/>
+    
+    <button id="btn">Calcular</button>
   </div>
 
   <script src="./index.js"></script>
