--- a/javascript/modulo18/index.html
+++ b/javascript/modulo18/index.html
@@ -11,8 +11,10 @@
   <div>Teste</div>
 
   <div id="app2">
-    <input type="number" id="n1" name="n1" class="input"/> +
-    <input type="number" id="n2" name="n2" class="input"/>
+    <form action="" id="formulario">
+      <input type="number" id="n1" name="n1" class="input"/> +
+      <input type="number" id="n2" name="n2" class="input"/>
+    </form>
     
     <button id="btn">Calcular</button>
   </div>
