--- a/desafios/toDo/toDo.html
+++ b/desafios/toDo/toDo.html
@@ -14,7 +14,7 @@
 <body>
   <main>
 
-    <h1>To Dos</h1>
+    <header><h1>To Dos</h1></header>
 
     <div id="todocontainer">
       <div id="task">
