--- a/desafios/toDolist/index.html
+++ b/desafios/toDolist/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
+  <script src="./index.js" defer></script>
 
 </head>
 <body>
@@ -21,20 +22,29 @@
   <main>
 
     <div id="inputContainer">
-      <input type="text" placeholder="Insert task">
+      <input type="text" placeholder="Insert task" name="insertTask" id="taskField">
       <div id="inputContainerButtons">
         <button id="addTask">Add task</button>
         <button id="resetTask">Reset tasks</button>
       </div>
     </div>
 
-    <div id="taskContainer">
-      <p>asdhuiash ihihaiduh aishd iausbd ausdiuh aishd iuasiudiauhsdi uasiu iudhiua iusdha iusdiusahdiu aishd iuash iudahsidha</p>
-      <p>asdhuiash ihihaiduh aishd iausbd ausdiuh aishd iuasiudiauhsdi uasiu iudhiua iusdha iusdiusahdiu aishd iuash iudahsidha</p>
+    <div id="taskContainers">
+      <!-- <div class="taskContainer">
+        <p>asdhuiash ihihaiduh aishd iausbd ausdiuh aishd iuasiudiauhsdi uasiu iudhiua iusdha iusdiusahdiu aishd iuash iudahsidha</p>
+      </div>
+      <div class="taskContainer">
+        <p>asdhuiash ihihaiduh aishd iausbd ausdiuh aishd iuasiudiauhsdi uasiu iudhiua iusdha iusdiusahdiu aishd iuash iudahsidha</p>
+      </div>
+      <div class="taskContainer">
+        <p>asdhuiash ihihaiduh aishd iausbd ausdiuh aishd iuasiudiauhsdi uasiu iudhiua iusdha iusdiusahdiu aishd iuash iudahsidha</p>
+      </div>
+      <div class="taskContainer">
+        <p>asdhuiash ihihaiduh aishd iausbd ausdiuh </p>
+      </div> -->
     </div>
 
   </main>
 
 </body>
-<script src="./index.js"></script>
 </html>
