--- a/desafios/toDo/toDo.html
+++ b/desafios/toDo/toDo.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>to Do</title>
+  <title>Lista de Tarefas</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_blue-blue.min.css" />
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./toDo.css">
+
 </head>
 <body>
-  <main>
+    <div class="content">
 
-    <header><h1>To Dos</h1></header>
+      <div class="title"><h2>Lista de Tarefas</h2></div>
 
-    <div id="todocontainer">
-      <div id="task">
-        <!-- Aqui irá entrar o formulário -->
+      <div class="input-button">
+
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="tarefa"></input>
+          <label for="tarefa" class="mdl-textfield__label">Digite uma tarefa...</label>
+        </div>
+
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-riple-effect mdl-button--accent">
+          Adicionar tarefa
+        </button>
+
       </div>
-      <div id="buttons">
-        <button id="addButton">+</button>
+
+      <div class="list">
+
+        <ul></ul>
+
       </div>
-      <div id="tasks"> tarefas aqui</div>
+
     </div>
-
-  </main>
   
 </body>
-<script src="./toDo.js"></script>
+<script src="./toDo.js" defer></script>
 </html>
