--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700;900&display=swap" rel="stylesheet">
 
-    <title>Nome da Página</title>
+    <title>Sérgio Sanchez</title>
   </head>
 
   <style>
@@ -34,6 +34,9 @@
       <a class="link" href="./desafios/nivel3/mercado-pago/mercado-pago.html" target="_blank">Clone Mercado Pago</a>
       <br />
       <a class="link" href="./desafios/nivel3/local-business/vet/index.html" target="_blank">Landing Page Clínica Veterinária</a>
+      <br />
+      <a class="link" href="./desafios/toDo/toDo.html" target="_blank">To-Do List</a>
+      <br />
     </div>
   </body>
 </html>
