--- a/javascript/modulo20/index.html
+++ b/javascript/modulo20/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modulo 20</title>
+  <script defer src="./index.js"></script>
 </head>
+
 <body>
-  
+  <div id="app"></div>
 </body>
-<script src="./index.js"></script>
+
 </html>
