--- a/desafios/nivel3/toDoList/index.html
+++ b/desafios/nivel3/toDoList/index.html
@@ -18,7 +18,53 @@
 </head>
 <body>
   
-  <h1>Adicionar uma tarefa</h1>
+  <div id="container">
+
+    <div id="input-container">
+      <div id="title">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M14 18.5H18.5M18.5 18.5H23M18.5 18.5V14M18.5 18.5V23M4 10H7C7.79565 10 8.55871 9.68393 9.12132 9.12132C9.68393 8.55871 10 7.79565 10 7V4C10 3.20435 9.68393 2.44129 9.12132 1.87868C8.55871 1.31607 7.79565 1 7 1H4C3.20435 1 2.44129 1.31607 1.87868 1.87868C1.31607 2.44129 1 3.20435 1 4V7C1 7.79565 1.31607 8.55871 1.87868 9.12132C2.44129 9.68393 3.20435 10 4 10V10ZM4 23H7C7.79565 23 8.55871 22.6839 9.12132 22.1213C9.68393 21.5587 10 20.7957 10 20V17C10 16.2044 9.68393 15.4413 9.12132 14.8787C8.55871 14.3161 7.79565 14 7 14H4C3.20435 14 2.44129 14.3161 1.87868 14.8787C1.31607 15.4413 1 16.2044 1 17V20C1 20.7957 1.31607 21.5587 1.87868 22.1213C2.44129 22.6839 3.20435 23 4 23ZM17 10H20C20.7957 10 21.5587 9.68393 22.1213 9.12132C22.6839 8.55871 23 7.79565 23 7V4C23 3.20435 22.6839 2.44129 22.1213 1.87868C21.5587 1.31607 20.7957 1 20 1H17C16.2044 1 15.4413 1.31607 14.8787 1.87868C14.3161 2.44129 14 3.20435 14 4V7C14 7.79565 14.3161 8.55871 14.8787 9.12132C15.4413 9.68393 16.2044 10 17 10V10Z" stroke="#18161F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h1>Adicionar uma tarefa</h1>
+      </div>
+
+      <div id="input">
+        <input id="input-task" type="text" placeholder="Descreva a tarefa">
+        <button id="btn-create">Criar tarefa</button>
+      </div>
+    </div>
+
+    <div id="task-container">
+
+      <div id="task-title">
+        <svg width="28" height="20" viewBox="0 0 28 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 2.5C1 1.672 1.672 1 2.5 1H10.5C11.328 1 12 1.672 12 2.5V7.5C12 8.328 11.328 9 10.5 9H2.5C2.10218 9 1.72064 8.84196 1.43934 8.56066C1.15804 8.27936 1 7.89782 1 7.5V2.5ZM17 4.5C17 3.672 17.672 3 18.5 3H25.5C26.328 3 27 3.672 27 4.5V15.5C27 16.328 26.328 17 25.5 17H18.5C18.1022 17 17.7206 16.842 17.4393 16.5607C17.158 16.2794 17 15.8978 17 15.5V4.5ZM3 14.5C3 13.672 3.672 13 4.5 13H11.5C12.328 13 13 13.672 13 14.5V17.5C13 18.328 12.328 19 11.5 19H4.5C4.10218 19 3.72064 18.842 3.43934 18.5607C3.15804 18.2794 3 17.8978 3 17.5V14.5Z" stroke="#18161F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h1>Quadro de tarefas</h1>
+      </div>
+
+      <div id="task-list">
+
+        <div class="task">
+          <div class="task-field">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M21 12C21 13.1819 20.7672 14.3522 20.3149 15.4442C19.8626 16.5361 19.1997 17.5282 18.364 18.364C17.5282 19.1997 16.5361 19.8626 15.4442 20.3149C14.3522 20.7672 13.1819 21 12 21C10.8181 21 9.64778 20.7672 8.55585 20.3149C7.46392 19.8626 6.47177 19.1997 5.63604 18.364C4.80031 17.5282 4.13738 16.5361 3.68508 15.4442C3.23279 14.3522 3 13.1819 3 12C3 9.61305 3.94821 7.32387 5.63604 5.63604C7.32387 3.94821 9.61305 3 12 3C14.3869 3 16.6761 3.94821 18.364 5.63604C20.0518 7.32387 21 9.61305 21 12Z" fill="#02B553"/>
+              <path d="M14.563 9.75C12.9927 11.1342 11.8114 12.9047 11.136 14.886L9 12.75" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            <p>Alinhamento semanal</p>
+          </div>
+          <div class="task-delete">
+            <svg class="delete" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 18L18 6M6 6L18 18" stroke="#FF497D" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
 
 </body>
 </html>
