--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <br />
       <a class="link" href="./desafios/toDo/toDo.html" target="_blank">To-Do List</a>
       <br />
+      <a class="link" href="./desafios/nivel3/toDoList/index.html" target="_blank">To-Do List 2</a>
+      <br />
     </div>
   </body>
 </html>
