--- a/javascript/modulo20/fetch/fetch.html
+++ b/javascript/modulo20/fetch/fetch.html
@@ -5,9 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chamadas de Redes</title>
-  <script src="./fetch.js" defer></script>
+  <script src="./javascript/script.js" defer></script>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  
+  <div id="cards">
+
+    <!-- <div class="container">
+
+      <div class="userId">USER1</div>
+      <div class="content">
+
+        <div class="postId">1</div>
+        <div class="title">sunt aut facere repellat provident occaecati excepturi optio reprehenderit</div>
+        <div class="body">quia et suscipit
+          suscipit recusandae consequuntur expedita et cum
+          reprehenderit molestiae ut ut quas totam
+          nostrum rerum est autem sunt rem eveniet architecto</div>
+      </div>
+
+    </div> -->
+
+  </div>
   
 </body>
 </html>
