--- a/javascript/modulo22/index.html
+++ b/javascript/modulo22/index.html
@@ -7,7 +7,9 @@
   <title>Hello JS Scope</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/main.css">
-  <script src="./javascript/script.js" defer></script>
+  <script src="./javascript/script.js" type="module" defer></script>
+  <script src="./javascript/a.js" defer></script>
+  <script src="./javascript/b.js" defer></script>
 </head>
 <body>
   
